src/objects/SALT_Servicers__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Access Denied</fullName>
                </value>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Provided by Client</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SALT Servicers</relationshipLabel>
        <relationshipName>SALT_Servicers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Servicer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. The Servicer you are trying to add is not listed as a SALT Servicer.</errorMessage>
            <filterItems>
                <field>Account.SALT_Servicer__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SALT Servicers (Servicer)</relationshipLabel>
        <relationshipName>SALT_Servicers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>SALT Servicers</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Access__c</columns>
        <columns>Servicer__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SALT Servicer - {0000}</displayFormat>
        <label>SALT Servicers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SALT Servicers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NSLDS_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND (Servicer__r.Name &lt;&gt; &apos;NSLDS&apos;, 
(ISPICKVAL (Access__c, &quot;Provided by Client&quot;)))</errorConditionFormula>
        <errorDisplayField>Access__c</errorDisplayField>
        <errorMessage>This value may not be selected unless the Account is NSLDS. Please select another value.</errorMessage>
    </validationRules>
</CustomObject>